apps/cabot-cup-next/acceptance/migrations/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cabot-cup-test
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
  labels:
    app.kubernetes.io/name: cabot-cup-test
    app.kubernetes.io/part-of: cabot-cup
    app.kubernetes.io/environment: acceptance
    db.cabot-cup/access: "true"
